@@ -48,6 +48,7 @@ Committed:
     * Dean's [PATCH] Re: problem with a .gif and v2.1.4
     * Dean's [PATCH] util_date.c needless reinitialization
     * Martin's [PATCH] Gimme a break! (missing break;s in mod_include)
+    * Dean's [PATCH] two bugs in mod_autoindex
 
 Available:
 
@@ -58,10 +59,6 @@ Available:
     * Dean's [PATCH] Re: [BUGFIXES] Wrong GID for PID file and UMASK for logs
 	<Pine.LNX.3.95dg3.971216000231.213J-100000@twinlark.arctic.org>
 	Status: Dean +1, Martin +1
-
-    * Dean's [PATCH] two bugs in mod_autoindex
-	<Pine.LNX.3.95dg3.971218120427.6996O-100000@twinlark.arctic.org>
-	Status: Dean +1, Randy +1, Martin +1
 
     * Dean's [PATCH] fix Rasmus' chunking error
 	<Pine.LNX.3.95dg3.971220143033.544I-100000@twinlark.arctic.org>
